gcc/testsuite/rust/rustc/ui/parser/keyword-static-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py static'

fn main() {
    let static = "foo"; // { dg-error "" "" { target *-*-* } }
}

